--- a/suBranch/Editor.html
+++ b/suBranch/Editor.html
@@ -5,7 +5,7 @@
     <link href='Editor.css' rel='stylesheet' type='text/css'/> 
   	<script src='Graph.js' type='text/javascript'></script> 
   	<script src='CircleNode.js' type='text/javascript'></script>
-  	<script src='ToolBar.js' type='text/javascript'></script>
+    <script src='DiamondNode.js' type='text/javascript'></script>
   	<script src='GraphFrame.js' type='text/javascript'></script> 
   </head>   
   <body>
