--- a/suBranch/Editor.html
+++ b/suBranch/Editor.html
@@ -6,6 +6,7 @@
   	<script src='Graph.js' type='text/javascript'></script> 
   	<script src='CircleNode.js' type='text/javascript'></script>
     <script src='DiamondNode.js' type='text/javascript'></script>
+    <script src='LineEdge.js' type='text/javascript'></script>
   	<script src='GraphFrame.js' type='text/javascript'></script> 
   </head>   
   <body>
