--- a/graphEditor/html/Editor.html
+++ b/graphEditor/html/Editor.html
@@ -2,12 +2,12 @@
   <head>
     <meta http-equiv='content-type' content='text/html; charset=UTF-8'/> 
     <title>Graph Editor</title> 
-    <link href='Editor.css' rel='stylesheet' type='text/css'/> 
-  	<script src='Graph.js' type='text/javascript'></script> 
-  	<script src='CircleNode.js' type='text/javascript'></script>
-    <script src='DiamondNode.js' type='text/javascript'></script>
-    <script src='LineEdge.js' type='text/javascript'></script>
-  	<script src='GraphFrame.js' type='text/javascript'></script> 
+    <link href='../css/Editor.css' rel='stylesheet' type='text/css'/>
+  	<script src='../js/Graph.js' type='text/javascript'></script>
+  	<script src='../js/CircleNode.js' type='text/javascript'></script>
+    <script src='../js/DiamondNode.js' type='text/javascript'></script>
+    <script src='../js/LineEdge.js' type='text/javascript'></script>
+  	<script src='../js/GraphFrame.js' type='text/javascript'></script>
   </head>   
   <body>
 	  <div id='toolbar'>
