--- a/graphEditor/html/Editor.html
+++ b/graphEditor/html/Editor.html
@@ -10,11 +10,12 @@
   	<script src='../js/GraphFrame.js' type='text/javascript'></script>
   </head>   
   <body>
-	  <div id='toolbar'>
+    <div>
       <button onclick="setSelect()">Selector</button>
       <button onclick="setCircle()">Circle</button>
       <button onclick="setDiamond()">Diamond</button>
       <button onclick="setEdge()">Edges</button>
+      <button onclick=""
   	</div>
 
     <div>
