--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Class Diagram Editor</title>
-    <link href='../../graphEditor/css/Editor.css' rel='stylesheet' type='text/css'/>
+    <title>UML Editor</title>
+    <link href='../css/Editor.css' rel='stylesheet' type='text/css'/>
     <script src='../js/ClassNode.js' type='text/javascript'></script>
-    <script src='../../graphEditor/js/Graph.js' type='text/javascript'></script>
-    <script src='../../graphEditor/js/CircleNode.js' type='text/javascript'></script>
-    <script src='../../graphEditor/js/DiamondNode.js' type='text/javascript'></script>
-    <script src='../../graphEditor/js/LineEdge.js' type='text/javascript'></script>
-    <script src='../../graphEditor/js/GraphFrame.js' type='text/javascript'></script>
+    <script src='../js/Graph.js' type='text/javascript'></script>
+    <script src='../js/CircleNode.js' type='text/javascript'></script>
+    <script src='../js/DiamondNode.js' type='text/javascript'></script>
+    <script src='../js/LineEdge.js' type='text/javascript'></script>
+    <script src='../js/GraphFrame.js' type='text/javascript'></script>
 </head>
 <body>
     <div id='toolbar'>
