--- a/graphEditor/html/graphEditor.html
+++ b/graphEditor/html/graphEditor.html
@@ -8,16 +8,15 @@
     <script src='../js/DiamondNode.js' type='text/javascript'></script>
     <script src='../js/LineEdge.js' type='text/javascript'></script>
   	<script src='../js/GraphFrame.js' type='text/javascript'></script>
+    <script src='../js/Toolbar.js' type='text/javascript'></script>
   </head>   
   <body>
-    <div>
+<!--     <div>
       <button onclick="setSelect()">Selector</button>
       <button onclick="setCircle()">Circle</button>
       <button onclick="setDiamond()">Diamond</button>
       <button onclick="setEdge()">Edges</button>
-  	</div>
-
-    <div>
+  	</div> -->
       <canvas id='graphpanel' width="248" height="200" style="border:1px solid #000000"></canvas>
     </div>
   </body>
