--- a/graphEditor/html/graphEditor.html
+++ b/graphEditor/html/graphEditor.html
@@ -1,24 +1,27 @@
 <html xmlns='http://www.w3.org/1999/xhtml'>
-  <head>
-    <meta http-equiv='content-type' content='text/html; charset=UTF-8'/> 
-    <title>Graph Editor</title> 
-    <link href='../css/Editor.css' rel='stylesheet' type='text/css'/>
-  	<script src='../js/Graph.js' type='text/javascript'></script>
-  	<script src='../js/CircleNode.js' type='text/javascript'></script>
-    <script src='../js/DiamondNode.js' type='text/javascript'></script>
-    <script src='../js/LineEdge.js' type='text/javascript'></script>
-  	<script src='../js/GraphFrame.js' type='text/javascript'></script>
-  </head>   
-  <body>
-    <div>
+
+<head>
+   <meta http-equiv='content-type' content='text/html; charset=UTF-8' />
+   <title>Graph Editor</title>
+   <link href='../css/Editor.css' rel='stylesheet' type='text/css' />
+   <script src='../js/Graph.js' type='text/javascript'></script>
+   <script src='../js/CircleNode.js' type='text/javascript'></script>
+   <script src='../js/DiamondNode.js' type='text/javascript'></script>
+   <script src='../js/LineEdge.js' type='text/javascript'></script>
+   <script src='../js/GraphFrame.js' type='text/javascript'></script>
+</head>
+
+<body>
+   <div class="toolbar">
       <button onclick="setSelect()">Selector</button>
       <button onclick="setCircle()">Circle</button>
       <button onclick="setDiamond()">Diamond</button>
       <button onclick="setEdge()">Edges</button>
-  	</div>
+   </div>
 
-    <div>
-      <canvas id='graphpanel' width="248" height="200" style="border:1px solid #000000"></canvas>
-    </div>
-  </body>
+   <div>
+      <canvas id='graphpanel' width="300" height="200" style="border:1px solid #000000"></canvas>
+   </div>
+</body>
+
 </html>
