--- a/graphEditor/html/graphEditor.html
+++ b/graphEditor/html/graphEditor.html
@@ -9,14 +9,12 @@
    <script src='../js/DiamondNode.js' type='text/javascript'></script>
    <script src='../js/LineEdge.js' type='text/javascript'></script>
    <script src='../js/GraphFrame.js' type='text/javascript'></script>
+   <script src='../js/Toolbar.js' type='text/javascript'></script>
+   <script src='../js/TBButton.js' type='text/javascript'></script>
 </head>
 
 <body>
-   <div class="toolbar">
-      <button onclick="setSelect()">Selector</button>
-      <button onclick="setCircle()">Circle</button>
-      <button onclick="setDiamond()">Diamond</button>
-      <button onclick="setEdge()">Edges</button>
+   <div id="toolbar-container">
    </div>
 
    <div>
