Fixed toolbar layout

--- a/graphEditor/html/graphEditor.html
+++ b/graphEditor/html/graphEditor.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-   <div id="toolbar-container">
-   </div>
+   <table id="toolbar-container">
+   </table>
 
    <div>
       <canvas id='graphpanel' width="300" height="200" style="border:1px solid #000000"></canvas>
