--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns='http://www.w3.org/1999/xhtml'>
+
 <head>
-    <meta charset="UTF-8">
-    <title>UML Editor</title>
-    <link href='../css/Editor.css' rel='stylesheet' type='text/css'/>
-    <script src='../js/ClassNode.js' type='text/javascript'></script>
+    <meta http-equiv='content-type' content='text/html; charset=UTF-8' />
+    <title>Graph Editor</title>
+    <link href='../css/Editor.css' rel='stylesheet' type='text/css' />
     <script src='../js/Graph.js' type='text/javascript'></script>
     <script src='../js/CircleNode.js' type='text/javascript'></script>
     <script src='../js/DiamondNode.js' type='text/javascript'></script>
     <script src='../js/LineEdge.js' type='text/javascript'></script>
     <script src='../js/GraphFrame.js' type='text/javascript'></script>
+    <script src='../js/Toolbar.js' type='text/javascript'></script>
+    <script src='../js/TBButton.js' type='text/javascript'></script>
+    <script src='../js/ClassNode.js' type='text/javascript'></script>
 </head>
+
 <body>
-    <div id='toolbar'>
-        <button onclick="setSelect()">Selector</button>
-        <button onclick="setCircle()">Circle</button>
-        <button onclick="setDiamond()">Diamond</button>
-        <button onclick="setEdge()">Edge</button>
-        <button onclick="setClass()">Class</button>
+    <table id="toolbar-container"></table>
+
+    <div>
+        <canvas id='graphpanel' width="400" height="300" style="border:1px solid #000000"></canvas>
     </div>
 
-    <div height = "150">
-        <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
-        <canvas id='graphpanel' style="position: absolute; z-index: 1" width="1300" height="600"></canvas>
+    <div height="150">
+        <div id="nodeContainer" style="position: absolute; width: 150; height: 150;"></div>
     </div>
+
 </body>
+
 </html>
