-fix bug which placed html tables outside of the canvas

--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -17,13 +17,10 @@
 <body>
     <table id="toolbar-container"></table>
 
-    <div>
-        <canvas id='graphpanel' width="400" height="300" style="border:1px solid #000000"></canvas>
+    <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
+        <canvas id='graphpanel' style="position: absolute; z-index: 1" width="600" height="300"></canvas>
     </div>
 
-    <div height="150">
-        <div id="nodeContainer" style="position: absolute; width: 150; height: 150;"></div>
-    </div>
 
 </body>
 
