-added connection point for html table

--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -17,7 +17,8 @@
 <body>
     <table id="toolbar-container"></table>
 
-    <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
+    <div>
+        <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
         <canvas id='graphpanel' style="position: absolute; z-index: 1" width="600" height="300"></canvas>
     </div>
 
