--- a/graphEditor/html/graphEditor.html
+++ b/graphEditor/html/graphEditor.html
@@ -11,6 +11,7 @@
    <script src='../js/GraphFrame.js' type='text/javascript'></script>
    <script src='../js/Toolbar.js' type='text/javascript'></script>
    <script src='../js/TBButton.js' type='text/javascript'></script>
+   <script src='../js/PropertySheet.js' type='text/javascript'></script>
 </head>
 
 <body>
@@ -20,6 +21,8 @@
    <div>
       <canvas id='graphpanel' width="300" height="200" style="border:1px solid #000000"></canvas>
    </div>
+   <table id="property-container">
+   </table>
 </body>
 
 </html>
