-added intial property sheet file

--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -12,6 +12,7 @@
     <script src='../js/Toolbar.js' type='text/javascript'></script>
     <script src='../js/TBButton.js' type='text/javascript'></script>
     <script src='../js/ClassNode.js' type='text/javascript'></script>
+    <script src='../js/PropertySheet.js' type='text/javascript'></script>
 </head>
 
 <body>
