--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta http-equiv='content-type' content='text/html; charset=UTF-8' />
-    <title>Graph Editor</title>
+    <title>UML Editor</title>
     <link href='../css/Editor.css' rel='stylesheet' type='text/css' />
     <script src='../js/Graph.js' type='text/javascript'></script>
     <script src='../js/CircleNode.js' type='text/javascript'></script>
@@ -23,6 +23,7 @@
         <canvas id='graphpanel' style="position: absolute; z-index: 1" width="600" height="300"></canvas>
     </div>
 
+    <table id="property-container"></table>
 
 </body>
 
