-fixed bug that made property sheet appear in the canvas

--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -18,12 +18,13 @@
 <body>
     <table id="toolbar-container"></table>
 
+    <table id="property-container"></table>
+
     <div>
         <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
-        <canvas id='graphpanel' style="position: absolute; z-index: 1" width="600" height="300"></canvas>
+        <div><canvas id='graphpanel' style="position: absolute; z-index: 1" width="600" height="300"></canvas></div>
     </div>
 
-    <table id="property-container"></table>
 
 </body>
 
