--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -13,6 +13,7 @@
     <script src='../js/TBButton.js' type='text/javascript'></script>
     <script src='../js/ClassNode.js' type='text/javascript'></script>
     <script src='../js/PropertySheet.js' type='text/javascript'></script>
+    <script src='../js/NoteNode.js' type='text/javascript'></script>
 </head>
 
 <body>
