--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -5,14 +5,12 @@
     <title>UML Editor</title>
     <link href='../css/Editor.css' rel='stylesheet' type='text/css' />
     <script src='../js/Graph.js' type='text/javascript'></script>
-    <script src='../js/CircleNode.js' type='text/javascript'></script>
-    <script src='../js/DiamondNode.js' type='text/javascript'></script>
     <script src='../js/LineEdge.js' type='text/javascript'></script>
     <script src='../js/GraphFrame.js' type='text/javascript'></script>
     <script src='../js/Toolbar.js' type='text/javascript'></script>
     <script src='../js/TBButton.js' type='text/javascript'></script>
     <script src='../js/ClassNode.js' type='text/javascript'></script>
-    <script src='../js/PropertySheet.js' type='text/javascript'></script>
+    <script src='../js/ClassPropertySheet.js' type='text/javascript'></script>
     <script src='../js/NoteNode.js' type='text/javascript'></script>
 </head>
 
