--- a/graphEditor/html/graphEditor.html
+++ b/graphEditor/html/graphEditor.html
@@ -1,28 +1,34 @@
-<html xmlns='http://www.w3.org/1999/xhtml'>
+<html xmlns="http://www.w3.org/1999/xhtml">
+   <head>
+      <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+      <title>Graph Editor</title>
+      <link href="../css/Editor.css" rel="stylesheet" type="text/css" />
+      <script src="../js/Graph.js"></script>
+      <script src="../js/CircleNode.js"></script>
+      <script src="../js/DiamondNode.js"></script>
+      <script src="../js/LineEdge.js"></script>
+      <script src="../js/LineEdgeDot.js"></script>
+      <script src="../js/HorizontalEdge.js"></script>
+      <script src="../js/VerticalEdge.js"></script>
+      <script src="../js/HorizontalEdgeDot.js"></script>
+      <script src="../js/VerticalEdgeDot.js"></script>
+      <script src="../js/GraphFrame.js"></script>
+      <script src="../js/Toolbar.js"></script>
+      <script src="../js/TBButton.js"></script>
+      <script src="../js/PropertySheet.js"></script>
+   </head>
 
-<head>
-   <meta http-equiv='content-type' content='text/html; charset=UTF-8' />
-   <title>Graph Editor</title>
-   <link href='../css/Editor.css' rel='stylesheet' type='text/css' />
-   <script src='../js/Graph.js' type='text/javascript'></script>
-   <script src='../js/CircleNode.js' type='text/javascript'></script>
-   <script src='../js/DiamondNode.js' type='text/javascript'></script>
-   <script src='../js/LineEdge.js' type='text/javascript'></script>
-   <script src='../js/GraphFrame.js' type='text/javascript'></script>
-   <script src='../js/Toolbar.js' type='text/javascript'></script>
-   <script src='../js/TBButton.js' type='text/javascript'></script>
-   <script src='../js/PropertySheet.js' type='text/javascript'></script>
-</head>
+   <body>
+      <table id="toolbar-container"></table>
 
-<body>
-   <table id="toolbar-container">
-   </table>
-
-   <div>
-      <canvas id='graphpanel' width="300" height="200" style="border:1px solid #000000"></canvas>
-   </div>
-   <table id="property-container">
-   </table>
-</body>
-
+      <div>
+         <canvas
+            id="graphpanel"
+            width="300"
+            height="200"
+            style="border:1px solid #000000"
+         ></canvas>
+      </div>
+      <table id="property-container"></table>
+   </body>
 </html>
