--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -12,12 +12,16 @@
     <script src='../js/ClassNode.js' type='text/javascript'></script>
     <script src='../js/ClassPropertySheet.js' type='text/javascript'></script>
     <script src='../js/NoteNode.js' type='text/javascript'></script>
+    <script src='../js/NotePropertySheet.js' type='text/javascript'></script>
+
 </head>
 
     <body>
         <table id="toolbar-container"></table>
 
         <table id="property-container"></table>
+
+        <table id="note-property-container"></table>
 
         <div>
             <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
