--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -13,6 +13,8 @@
     <script src='../js/ClassPropertySheet.js' type='text/javascript'></script>
     <script src='../js/NoteNode.js' type='text/javascript'></script>
     <script src='../js/NotePropertySheet.js' type='text/javascript'></script>
+    <script src='../js/DashedEdge.js' type='text/javascript'></script>
+
 
 </head>
 
