--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -14,6 +14,10 @@
     <script src='../js/NoteNode.js' type='text/javascript'></script>
     <script src='../js/NotePropertySheet.js' type='text/javascript'></script>
     <script src='../js/DashedEdge.js' type='text/javascript'></script>
+    <script src='../js/InterfaceNode.js' type='text/javascript'></script>
+    <script src='../js/InterfacePropertySheet.js' type='text/javascript'></script>
+
+
 </head>
 
     <body>
@@ -22,6 +26,7 @@
         <table id="properties">
             <td valign="top" id="property-container"></td>
             <td valign="top" id="note-property-container"></td>
+            <td valign="top" id="interface-property-container"></td>
         </table>
         <div>
             <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
