-fix bug which didnt allow solid lines to appear

--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -13,11 +13,9 @@
     <script src='../js/ClassPropertySheet.js' type='text/javascript'></script>
     <script src='../js/NoteNode.js' type='text/javascript'></script>
     <script src='../js/NotePropertySheet.js' type='text/javascript'></script>
-    <script src='../js/DashedEdge.js' type='text/javascript'></script>
+    <script src='../js/LineEdgeDot.js' type='text/javascript'></script>
     <script src='../js/InterfaceNode.js' type='text/javascript'></script>
     <script src='../js/InterfacePropertySheet.js' type='text/javascript'></script>
-
-
 </head>
 
     <body>
@@ -28,11 +26,11 @@
             <td valign="top" id="note-property-container"></td>
             <td valign="top" id="interface-property-container"></td>
         </table>
+
         <div>
             <div id='nodeContainer' style="position: absolute; width: 150px; height: 150px;"></div>
             <div><canvas id='graphpanel' style="position: absolute; z-index: 1" width="1000" height="500"></canvas></div>
         </div>
-
     </body>
 
 </html>
