Added arrow head

--- a/umlEditor/html/umlEditor.html
+++ b/umlEditor/html/umlEditor.html
@@ -6,6 +6,7 @@
     <link href='../css/Editor.css' rel='stylesheet' type='text/css' />
     <script src='../js/Graph.js' type='text/javascript'></script>
     <script src='../js/LineEdge.js' type='text/javascript'></script>
+    <script src='../js/arrowHead.js' type='text/javascript'></script>
     <script src='../js/GraphFrame.js' type='text/javascript'></script>
     <script src='../js/Toolbar.js' type='text/javascript'></script>
     <script src='../js/TBButton.js' type='text/javascript'></script>
